# datops-agent-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
datops_agent/: __init__.py  cache.py  core.py  heartbeat.py  trust_gate.py  types.py
datops_agent/adapters/: __init__.py  crewai.py  generic.py  langchain.py  openai_sdk.py
tests/: test_adapters.py  test_core.py  test_trust_gate.py
